docs(augmented-by-csv): 更新代码以使用 GPT-4 模型并优化输出格式- 将使用的模型从 gpt-3.5-turbo-0301 更改为 gpt-4o-mini - 优化了代码结构，提高了可读性和效率 - 改进了输出格式，使用 Markdown 表格更清晰地展示了结果 - 移除了不必要的代码块和冗余的输出

--- a/retrieval_augmented_generation/rag-helloworld.ipynb
+++ b/retrieval_augmented_generation/rag-helloworld.ipynb
@@ -2,19 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-03-23T01:10:07.986103Z",
-     "start_time": "2024-03-23T01:09:46.479264Z"
+     "end_time": "2025-04-01T02:16:01.215737Z",
+     "start_time": "2025-04-01T02:16:00.288423Z"
     }
    },
+   "source": "!pip install langchain langchain_openai faiss-cpu --upgrade --quiet",
    "outputs": [],
-   "source": [
-    "!pip install langchain langchain_openai faiss-gpu --upgrade --quiet"
-   ]
+   "execution_count": 136
   },
   {
    "cell_type": "markdown",
@@ -29,34 +27,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
    "source": [
     "# 三选一 加载OPENAI_API_KEY\n",
     "\n",
     "# 本地运行，包含.env文件\n",
-    "# from dotenv import load_dotenv\n",
-    "# load_dotenv()\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv(override=True)\n",
     "\n",
     "# 本地运行，不包含.env文件\n",
     "# import os\n",
     "# os.environ['OPENAI_API_KEY'] = 'sk-123456789'\n",
     "\n",
     "# google colab运行，需要配置secret key\n",
-    "import os\n",
-    "from google.colab import userdata\n",
-    "\n",
-    "os.environ[\"OPENAI_API_KEY\"] = userdata.get('OPENAI_API_KEY')"
+    "# import os\n",
+    "# from google.colab import userdata\n",
+    "# \n",
+    "# os.environ[\"OPENAI_API_KEY\"] = userdata.get('OPENAI_API_KEY')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-04-01T02:16:01.224027Z",
+     "start_time": "2025-04-01T02:16:01.217693Z"
+    }
    },
-   "id": "e45b371e1d64bad7"
+   "id": "e45b371e1d64bad7",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 137
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [],
    "source": [
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain_community.vectorstores.faiss import FAISS\n",
@@ -69,34 +80,34 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-23T01:10:15.171715Z",
-     "start_time": "2024-03-23T01:10:11.912298Z"
+     "end_time": "2025-04-01T02:16:01.229487Z",
+     "start_time": "2025-04-01T02:16:01.225544Z"
     }
    },
-   "id": "43d06ed9ed1d302c"
+   "id": "43d06ed9ed1d302c",
+   "outputs": [],
+   "execution_count": 138
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [],
    "source": [
     "# 创建LLM\n",
-    "model = 'gpt-3.5-turbo-0613'\n",
+    "model = 'gpt-4o-mini'\n",
     "llm = ChatOpenAI(model=model)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-23T01:11:45.701101Z",
-     "start_time": "2024-03-23T01:11:44.467413Z"
+     "end_time": "2025-04-01T02:16:01.315818Z",
+     "start_time": "2025-04-01T02:16:01.232132Z"
     }
    },
-   "id": "7cb83e8589cbc822"
+   "id": "7cb83e8589cbc822",
+   "outputs": [],
+   "execution_count": 139
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [],
    "source": [
     "# 创建Prompt\n",
     "prompt = ChatPromptTemplate.from_template('基于上下文：{context}\\n回答：{input}')"
@@ -104,16 +115,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-23T01:11:48.993205Z",
-     "start_time": "2024-03-23T01:11:48.951261Z"
+     "end_time": "2025-04-01T02:16:01.318849Z",
+     "start_time": "2025-04-01T02:16:01.316578Z"
     }
    },
-   "id": "bf7ba0c9470bffc8"
+   "id": "bf7ba0c9470bffc8",
+   "outputs": [],
+   "execution_count": 140
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [],
    "source": [
     "# 创建输出解析器\n",
     "output_parser = StrOutputParser()"
@@ -121,33 +132,33 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-23T01:11:50.080267Z",
-     "start_time": "2024-03-23T01:11:50.039719Z"
+     "end_time": "2025-04-01T02:16:01.321444Z",
+     "start_time": "2025-04-01T02:16:01.319514Z"
     }
    },
-   "id": "d9ddf4cebf150477"
+   "id": "d9ddf4cebf150477",
+   "outputs": [],
+   "execution_count": 141
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "outputs": [],
    "source": [
     "# 模拟文档\n",
-    "docs = [Document(page_content=\"课程代码 01041110\t课程名称 企业级应用软件设计与开发\t课程大类 专业学位硕士类课程\t班级 23硕士合班\t学生数 165\t周次 2-13\t时间 【星期二】6,7,8节\t上课地点 马区西-东教学楼-233(西东教-合四)\t\")]"
+    "docs = [Document(page_content=\"课程代码 01041110\t课程名称 企业级应用软件设计与开发\t课程大类 专业学位硕士类课程\t班级 23硕士合班\t学生数 165\t周次 2-14\t时间 【星期四】9,10,11节\t上课地点 马区西-东教学楼-133(西东教-合一)\t\")]"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-23T01:14:49.044550Z",
-     "start_time": "2024-03-23T01:14:48.998204Z"
+     "end_time": "2025-04-01T02:16:01.324929Z",
+     "start_time": "2025-04-01T02:16:01.322935Z"
     }
    },
-   "id": "8f7c51995095f057"
+   "id": "8f7c51995095f057",
+   "outputs": [],
+   "execution_count": 142
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "outputs": [],
    "source": [
     "# 文档嵌入\n",
     "splits = RecursiveCharacterTextSplitter().split_documents(docs)\n",
@@ -157,16 +168,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-23T01:14:54.167902Z",
-     "start_time": "2024-03-23T01:14:52.217471Z"
+     "end_time": "2025-04-01T02:16:02.878461Z",
+     "start_time": "2025-04-01T02:16:01.325588Z"
     }
    },
-   "id": "cdf3cf9ef8ccf0de"
+   "id": "cdf3cf9ef8ccf0de",
+   "outputs": [],
+   "execution_count": 143
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [],
    "source": [
     "# 创建Chain\n",
     "chain_no_context = RunnablePassthrough() | llm | output_parser\n",
@@ -178,49 +189,56 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-23T01:14:55.138630Z",
-     "start_time": "2024-03-23T01:14:55.107283Z"
+     "end_time": "2025-04-01T02:16:02.887004Z",
+     "start_time": "2025-04-01T02:16:02.880548Z"
     }
    },
-   "id": "b52607612fb177e7"
+   "id": "b52607612fb177e7",
+   "outputs": [],
+   "execution_count": 144
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "source": [
+    "# 调用Chain\n",
+    "question = '企业级应用软件设计与开发的上课地点在哪里？'\n",
+    "\n",
+    "# 调用没有上下文的chain\n",
+    "response_no_context = chain_no_context.invoke(question)\n",
+    "print(\"没有上下文的回答：\")\n",
+    "print(response_no_context)\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# 调用包含上下文的chain\n",
+    "response_with_context = chain.invoke(question)\n",
+    "print(\"包含上下文的回答：\")\n",
+    "print(response_with_context)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-04-01T02:16:07.800272Z",
+     "start_time": "2025-04-01T02:16:02.893507Z"
+    }
+   },
+   "id": "cc9b1b5687019150",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "上课地点一般在大学或专业培训机构的教室或实验室进行。具体的上课地点可以根据培训机构或大学的安排而定，可以通过咨询相关机构或学校获取具体信息。\n",
-      "企业级应用软件设计与开发的上课地点在马区西-东教学楼-233(西东教-合四)。\n"
+      "没有上下文的回答：\n",
+      "企业级应用软件设计与开发的课程地点通常取决于具体的教育机构或培训中心。如果你是在大学或职业学院学习，课程地点可能是在校园内的特定教室。如果你参加的是在线课程，那么上课地点则是在你自己的设备上。\n",
+      "\n",
+      "为了得到准确的信息，建议你查看具体教育机构的官方网站或联系相关的教学部门，以获取最新的上课地点信息。\n",
+      "\n",
+      "\n",
+      "包含上下文的回答：\n",
+      "企业级应用软件设计与开发的上课地点是马区西-东教学楼-133(西东教-合一)。\n"
      ]
     }
    ],
-   "source": [
-    "# 调用Chain\n",
-    "question = '企业级应用软件设计与开发的上课地点在哪里？'\n",
-    "print(chain_no_context.invoke(question))\n",
-    "print(chain.invoke(question))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-23T01:15:01.060715Z",
-     "start_time": "2024-03-23T01:14:56.451704Z"
-    }
-   },
-   "id": "cc9b1b5687019150"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "3b6ea67f50d966f"
+   "execution_count": 145
   }
  ],
  "metadata": {
